--- a/src/components/Paint/paint.css
+++ b/src/components/Paint/paint.css
@@ -196,7 +196,7 @@
   padding: 0.5rem;
   scrollbar-width: none;
   width: 100%;
-  max-width: 600px; /* Adjust width as needed */
+  max-width: 600px;
   margin: 0 auto;
 }
 
@@ -208,7 +208,6 @@
   padding: 2rem;
   width: 100%;
 }
-
 
 .pagination button {
   background: #f5f5f5;
@@ -239,6 +238,7 @@
   .pagination {
     gap: 0.3rem;
     flex-wrap: wrap;
+    gap: 0.3rem !important;
   }
 
   .pagination button {
