--- a/src/components/Reading/Reading.css
+++ b/src/components/Reading/Reading.css
@@ -214,7 +214,8 @@
   justify-content: center;
   flex-wrap: wrap;
   gap: 0.5rem;
-  margin: 2rem 0;
+  margin: 1rem 0 ;
+  margin-top: 4%;
 }
 
 .pagination button {
