--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -83,7 +83,7 @@
 }
 
 .nav-link::after {
-  content: '';
+  content: "";
   position: absolute;
   bottom: 0;
   left: 50%;
@@ -142,7 +142,6 @@
   }
 }
 
-
 @keyframes slideIn {
   from {
     opacity: 0;
@@ -158,8 +157,18 @@
   animation: slideIn 0.3s ease forwards;
 }
 
-.nav-menu.active .nav-item:nth-child(1) { animation-delay: 0.1s; }
-.nav-menu.active .nav-item:nth-child(2) { animation-delay: 0.2s; }
-.nav-menu.active .nav-item:nth-child(3) { animation-delay: 0.3s; }
-.nav-menu.active .nav-item:nth-child(4) { animation-delay: 0.4s; }
-.nav-menu.active .nav-item:nth-child(5) { animation-delay: 0.5s; } 
+.nav-menu.active .nav-item:nth-child(1) {
+  animation-delay: 0.1s;
+}
+.nav-menu.active .nav-item:nth-child(2) {
+  animation-delay: 0.2s;
+}
+.nav-menu.active .nav-item:nth-child(3) {
+  animation-delay: 0.3s;
+}
+.nav-menu.active .nav-item:nth-child(4) {
+  animation-delay: 0.4s;
+}
+.nav-menu.active .nav-item:nth-child(5) {
+  animation-delay: 0.5s;
+}
