--- a/src/components/Reading/Reading.css
+++ b/src/components/Reading/Reading.css
@@ -4,6 +4,7 @@
   padding: 2rem;
   min-height: 100vh;
   margin: 0 auto;
+  
 }
 
 .page-title {
@@ -214,11 +215,7 @@
   justify-content: center;
   flex-wrap: wrap;
   gap: 0.5rem;
-  margin: 1rem 0 ;
-  position:relative;
-  top: 15px;
-  left: 45px;
-  
+  margin: 1rem 0;
 }
 
 .pagination button {
@@ -457,7 +454,7 @@
 
 @media (max-width: 768px) {
   .reading-container {
-    padding: 1rem;
+    padding-top: 1rem;
   }
 
   .books-grid {
